--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,19 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+     env:
+      DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        run: | 
+          echo "$DOCKERHUB_USERNAME";
+          echo "$DOCKERHUB_TOKEN"
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_TOKEN
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -24,4 +31,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/frontend:latest
+          tags: $DOCKERHUB_USERNAME/frontend:latest
