--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,29 +7,21 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-    - shell: bash
-        env:
-        DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
-        DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-    -
-      run: | 
-        echo "$DOCKERHUB_USERNAME";
-        echo "$DOCKERHUB_TOKEN";
-    -
-      name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: $DOCKERHUB_USERNAME
-        password: $DOCKERHUB_TOKEN
-    -
-      name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    -
-      name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    -
-      name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        push: true
-        tags: $DOCKERHUB_USERNAME/frontend:latest
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/frontend:latest
