--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Test
+        run: |
+          echo ${{ vars.DOCKERHUB_USERNAME }}
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3.1.0
