--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Test
+        env: DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
         run: |
-          echo ${{ vars.DOCKERHUB_USERNAME }}
+          echo "USERNAME: $DOCKERHUB_USERNAME"
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3.1.0
