--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,29 +3,39 @@ name: ci
 on:
   push:
 
+env:
+  TEST_TAG: user/app:test
+  LATEST_TAG: user/app:latest
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Test
-        env: DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
-        run: |
-          echo "USERNAME: $DOCKERHUB_USERNAME"
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v3.1.0
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up QEMU
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Build and push
+
+      - name: Build and export to Docker
         uses: docker/build-push-action@v6
         with:
+          load: true
+          tags: ${{ env.TEST_TAG }}
+
+      - name: Test
+        run: |
+          docker run --rm ${{ env.TEST_TAG }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: user/app:latest
+          tags: ${{ env.LATEST_TAG }}
