--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,42 @@
-name: ci
+name: Docker Build and Push
 
 on:
   push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  # Allow manual triggers from the Actions tab
+  workflow_dispatch:
 
 env:
-  TEST_TAG: user/app:test
-  LATEST_TAG: user/app:latest
+  # Change these variables according to your needs
+  DOCKER_HUB_REPO: joshhyde654/frontend
+  IMAGE_TAG: latest
 
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
+    
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and export to Docker
-        uses: docker/build-push-action@v6
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
-          load: true
-          tags: ${{ env.TEST_TAG }}
-
-      - name: Test
-        run: |
-          docker run --rm ${{ env.TEST_TAG }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          platforms: linux/amd64,linux/arm64
+          context: .
           push: true
-          tags: ${{ env.LATEST_TAG }}
+          tags: |
+            ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
+            ${{ env.DOCKER_HUB_REPO }}:${{ github.sha }}
+          cache-from: type=registry,ref=${{ env.DOCKER_HUB_REPO }}:buildcache
+          cache-to: type=registry,ref=${{ env.DOCKER_HUB_REPO }}:buildcache,mode=max
