--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,47 +2,40 @@ name: Docker Build and Push
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
 
 env:
-  DOCKER_HUB_REPO: joshhyde654/frontend
-  IMAGE_TAG: latest
+  TEST_TAG: joshhyde546/frontend:test
+  LATEST_TAG: joshhyde546/frontend:latest
 
 jobs:
-  build-and-push:
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-      
-      - name: Check for required secrets
-        run: |
-          if [ -z "${{ secrets.DOCKERHUB_USERNAME }}" ]; then
-            echo "Error: DOCKERHUB_USERNAME secret is not set"
-            exit 1
-          fi
-          if [ -z "${{ secrets.DOCKERHUB_TOKEN }}" ]; then
-            echo "Error: DOCKERHUB_TOKEN secret is not set"
-            exit 1
-          fi
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Build and push Docker image
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and export to Docker
         uses: docker/build-push-action@v6
         with:
-          context: .
+          load: true
+          tags: ${{ env.TEST_TAG }}
+
+      - name: Test
+        run: |
+          docker run --rm ${{ env.TEST_TAG }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
-            ${{ env.DOCKER_HUB_REPO }}:${{ github.sha }}
+          tags: ${{ env.LATEST_TAG }}
