--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,36 +2,38 @@ name: Docker Build and Push
 
 on:
   push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  # Allow manual triggers from the Actions tab
+  workflow_dispatch:
 
 env:
-  TEST_TAG: joshhyde546/frontend:test
-  LATEST_TAG: joshhyde546/frontend:latest
+  # Change these variables according to your needs
+  DOCKER_HUB_REPO: joshhyde654/frontend
+  IMAGE_TAG: latest
 
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
+    
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and export to Docker
+      
+      - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          load: true
-          tags: ${{ env.TEST_TAG }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          platforms: linux/amd64,linux/arm64
+          context: .
           push: true
-          tags: ${{ env.LATEST_TAG }}
+          tags: |
+            ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
