--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,41 @@
-name: Docker Build and Push
+name: ci
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  # Allow manual triggers from the Actions tab
-  workflow_dispatch:
 
 env:
-  # Change these variables according to your needs
-  DOCKER_HUB_REPO: joshhyde654/frontend
-  IMAGE_TAG: latest
+  TEST_TAG: joshhyde654/frontend:test
+  LATEST_TAG: joshhyde654/frontend:latest
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-flags: --debug  # Enable debug mode for buildx
-      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          logout: false
-      
-      - name: Build and push Docker image
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and export to Docker
         uses: docker/build-push-action@v6
         with:
-          context: .
+          load: true
+          tags: ${{ env.TEST_TAG }}
+
+      - name: Test
+        run: |
+          docker run --rm ${{ env.TEST_TAG }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
+          tags: ${{ env.LATEST_TAG }}
